--- a/genres/country/country.html
+++ b/genres/country/country.html
@@ -26,6 +26,6 @@
     <div class="col"> <iframe width="500" height="400" src="https://www.youtube.com/embed/nADTbWQof7Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <h2> Your Man </h2>
       </div>
     </div>
-    <h1> Thank you for choosing Country, cowboy!</h1>
+    <h1> Thank you for choosing Country, cowboy!</h1> <p> <a href="../../finalprojectpage.html"> <b> ←Go Back </b> </a> </p>
   </body>
 </html>
