--- a/genres/rock/rock.html
+++ b/genres/rock/rock.html
@@ -26,6 +26,6 @@
     <div class="col"> <iframe width="500" height="400" src="https://www.youtube.com/embed/9X6e7uctAww" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> <h2> You Really Got Me </h2>
       </div>
     </div>
-    <h1> Thank you for choosing Rock, Rocker!</h1>
+    <h1> Thank you for choosing Rock, Rocker!</h1> <p> <a href="../../finalprojectpage.html"> <b> ←Go Back </b> </a> </p>
   </body>
 </html>
